welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( (a<19 & a>13) || (b>13 & b<19) || (c>13 & c<19)){
        ^